--- a/files/osm/display-osm-ol3.html
+++ b/files/osm/display-osm-ol3.html
@@ -2,10 +2,16 @@
 	<head>
 		<title>OpenLayers .osm File Example</title>
 		
-<script src="https://cdn.jsdelivr.net/npm/ol@v8.1.0/dist/ol.js"></script>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@v8.1.0/ol.css" />
-<script src="https://unpkg.com/ol-layerswitcher@4.1.1"></script>
-<link rel="stylesheet" href="https://unpkg.com/ol-layerswitcher@4.1.1/dist/ol-layerswitcher.css" />
+		<!--
+		<script src="https://cdn.jsdelivr.net/npm/ol@v8.1.0/dist/ol.js"></script>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@v8.1.0/ol.css" />
+		<script src="https://unpkg.com/ol-layerswitcher@4.1.1/dist/ol-layerswitcher.js"></script>
+		<link rel="stylesheet" href="https://unpkg.com/ol-layerswitcher@4.1.1/dist/ol-layerswitcher.css" />
+		-->
+		<script src="./lib/ol.js"></script>
+		<link rel="stylesheet" href="./lib/ol.css" />
+		<script src="./lib/ol-layerswitcher.js"></script>
+		<link rel="stylesheet" href="./lib/ol-layerswitcher.css" />
 
 		<script type="text/javascript">
 			var lat=34.070;
@@ -54,7 +60,7 @@ function init(){
 	});
 	
 	const dim_orange = ol.color.asString(
-		ol.color.asArray('orange').slice(0, 3).concat(0.3));
+		ol.color.asArray('orange').slice(0, 3).concat(0.1));
 	const localOSM = new ol.layer.Vector({
 		title: 'localOSM',
 		source: vectorSource,
