--- a/files/ol/index-wkt.html
+++ b/files/ol/index-wkt.html
@@ -5,6 +5,8 @@
     <title>WKT</title>
 <script src="https://cdn.jsdelivr.net/npm/ol@v8.1.0/dist/ol.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@v8.1.0/ol.css">
+<script src="https://cdn.jsdelivr.net/npm/@turf/turf@6/turf.min.js"></script>
+<script src="./proj4.min.js"></script>
     <style>
       .map {
         width: 100%;
@@ -15,6 +17,6 @@
   <body>
     <div id="map" class="map"></div>
 
-    <script type="module" src="main-wkt.js"></script>
+    <script src="main-wkt.js"></script>
   </body>
 </html>
