--- a/files/ol/index-jsts.html
+++ b/files/ol/index-jsts.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>turf.js</title>
+    <title>JSTS Integration</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@v8.1.0/ol.css">
     <style>
       .map {
@@ -15,7 +15,7 @@
     <div id="map" class="map"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/ol@v8.1.0/dist/ol.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@turf/turf@6/turf.min.js"></script>
-<script src="main-turf.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jsts@2.3.0/dist/jsts.min.js"></script>
+    <script src="main-jsts.js"></script>
   </body>
 </html>
