--- a/files/spl/london.html
+++ b/files/spl/london.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<!--script src="./lib/lib.js"></script-->
-		<script src="https://cdn.jsdelivr.net/npm/ol@v8.1.0/dist/ol.js"></script>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@v8.1.0/ol.css" />
-		<script src="https://unpkg.com/ol-layerswitcher@4.1.1/dist/ol-layerswitcher.js"></script>
 		<link rel="stylesheet" href="https://unpkg.com/ol-layerswitcher@4.1.1/dist/ol-layerswitcher.css" />
 		<!--
 		<link rel="stylesheet" href="./lib/ol.css" />
-		<script src="./lib/ol-layerswitcher.js"></script>
 		<link rel="stylesheet" href="./lib/ol-layerswitcher.css" />
-		<script src="./sld/sldreader.js"></script>
 		-->
+		
+		<!--
+		<script src="./lib/lib.js"></script>
+		-->
+		<!--script type="text/javascript" src="./lib/build/index.js"></script-->
+		<!--
+		<script type="text/javascript" src="./lib/ol.js"></script>
+		-->
+		<script src="https://cdn.jsdelivr.net/npm/ol@v8.1.0/dist/ol.js"></script>
+		<!--
+		<script src="https://unpkg.com/ol-layerswitcher@4.1.1/dist/ol-layerswitcher.js"></script>
+		-->
+		
+		<script type="text/javascript" src="./lib/ol-layerswitcher.js"></script>
+		<script type="text/javascript" src="./sld/sldreader.js"></script>
+		<!--
+		-->
+		
 		
 		<script src="./lib/proj4.min.js"></script>
 		<style>
