--- a/files/spl/london.html
+++ b/files/spl/london.html
@@ -49,7 +49,7 @@
 			<label for="hitTolerance">
 				Hit tolerance for selecting features:
 				<br />Area: &nbsp;
-				<canvas id="circle" width="22px" height="22px" style="vertical-align: middle;"></canvas>
+				<canvas id="circle" width="22" height="22" style="vertical-align: middle;"></canvas>
 				&nbsp;
 			</label>
 			<select id="hitTolerance">
