--- a/files/ol/index-geotiff.html
+++ b/files/ol/index-geotiff.html
@@ -2,15 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Modify Features Test</title>
+    <title>GeoTIFF with Overviews</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@v8.1.0/ol.css">
     <style>
       .map {
         width: 100%;
         height: 400px;
-      }
-      .map {
-        background: grey;
       }
     </style>
   </head>
@@ -18,6 +15,6 @@
     <div id="map" class="map"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/ol@v8.1.0/dist/ol.js"></script>
-    <script type="module" src="main-modify.js"></script>
+    <script type="module" src="main-geotiff.js"></script>
   </body>
 </html>
