--- a/files/ol/index-osm.html
+++ b/files/ol/index-osm.html
@@ -15,6 +15,7 @@
   <body>
     <div id="map" class="map"></div>
 
+<script src="./maptiler-apikey.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/ol@v8.1.0/dist/ol.js"></script>
     <script type="module" src="main-osm.js"></script>
   </body>
