--- a/files/ol/index-topojson.html
+++ b/files/ol/index-topojson.html
@@ -2,22 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Modify Features Test</title>
+    <title>TopoJSON</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@v8.1.0/ol.css">
     <style>
       .map {
         width: 100%;
         height: 400px;
       }
-      .map {
-        background: grey;
-      }
     </style>
   </head>
   <body>
     <div id="map" class="map"></div>
 
+<script src="./maptiler-apikey.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/ol@v8.1.0/dist/ol.js"></script>
-    <script type="module" src="main-modify.js"></script>
+    <script type="module" src="main-topojson.js"></script>
   </body>
 </html>
