--- a/files/spl/london.html
+++ b/files/spl/london.html
@@ -45,6 +45,7 @@
 	<body>
 		<div id="sqlQuery"></div>
 		<div id="mouse-position"></div>
+		<div id="hit-tolerance">
 		<form>
 			<label for="hitTolerance">
 				Hit tolerance for selecting features:
@@ -58,10 +59,12 @@
 				<option value="10">10 Pixels</option>
 			</select>
 		</form>
+		</div>
 		<div id="map" class="map"></div>
 		<!--div id="explanation">OpenLayers displaying a .osm file directly. This <a href="display-osm.osm">display-osm.osm</a> is a very small example. Most .osm files would be too large to do this, and in general you're more likely to load in vector features in a different way</div-->
 		
 		<script src="./lib/sqlquery.js"></script>
+		<script src="./lib/map_show.js"></script>
 		<script>
 function prepKeys(obj, query, label) {
 	let ret = obj;
