--- a/files/leaflet/local.html
+++ b/files/leaflet/local.html
@@ -3,6 +3,8 @@
 	<head>
 		<link rel="stylesheet" href="./lib/leaflet.css">
 		<script src="./lib/leaflet-src.js"></script>
+		<script src="./lib/proj4.min.js"></script>
+		<script src="./lib/proj4leaflet.js"></script>
 		<style>
 			/*
 			body {
