full implementation, needs testing

--- a/files/spl/spl-view2.html
+++ b/files/spl/spl-view2.html
@@ -40,7 +40,7 @@
 		<script src="./lib/proj4.js"></script>
 		
 		<script src="./lib/sqlquery.js"></script>
-		<script src="./lib/map_show.js"></script>
+		<script src="./lib/map_show_ol.js"></script>
 		
 		<script type="module" src="./lib/spl-view2.js"></script>
 	</body>
