--- a/files/spl/spl-view3.html
+++ b/files/spl/spl-view3.html
@@ -2,39 +2,14 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		
-		<link href="./lib/leaflet.css" rel="stylesheet" />
-		<script src="./lib/proj4.js"></script>
-		<script src="./lib/leaflet-src.js"></script>
-		<script src="./lib/leaflet.textpath.js"></script>
-		<script src="./lib/leaflet.sld.js"></script>
-		<script src="./lib/proj4leaflet.js"></script>
-		<link href="./lib/leaflet.zoomdisplay.css" rel="stylesheet" />
-		<script src="./lib/leaflet.zoomdisplay-src.js"></script>
 		<!--
+		<link href="./lib/leaflet.css" rel="stylesheet" />
+		<link href="./lib/leaflet.zoomdisplay.css" rel="stylesheet" />
 		-->
 		
-		<!--
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@v8.2.0/ol.css" />
 		<link rel="stylesheet" href="https://unpkg.com/ol-layerswitcher@4.1.1/dist/ol-layerswitcher.css" />
-		<link rel="stylesheet" href="./lib/ol.css" />
-		<link rel="stylesheet" href="./lib/ol-layerswitcher.css" />
-		-->
-		
 		<!--
-		<script src="./lib/lib.js"></script>
-		-->
-		<!--
-		<script type="text/javascript" src="./lib/ol.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/ol@v8.2.0/dist/ol.js"></script>
-		-->
-		<!--
-		<script src="https://unpkg.com/ol-layerswitcher@4.1.1/dist/ol-layerswitcher.js"></script>
-		-->
-		
-		<!--
-		<script type="text/javascript" src="./lib/ol-layerswitcher.js"></script>
-		<script type="text/javascript" src="./sld/sldreader.js"></script>
 		-->
 		
 		<style>
@@ -43,12 +18,13 @@
 				margin-left: 0;
 				margin-right: 0;
 			}
-			.map {
+			#map {
 				width: 98vw;
 				height: 59vh;
 				margin-top: 1vh;
 				margin-left: 1vw;
 				border: solid 1px gray;
+				
 				/*position: fixed;*/
 			}
 		</style>
@@ -57,17 +33,31 @@
 		</title>
 	</head>
 	<body>
-		<div id="map" class="map"></div>
-		<!--div id="explanation">OpenLayers displaying a .osm file directly. This <a href="display-osm.osm">display-osm.osm</a> is a very small example. Most .osm files would be too large to do this, and in general you're more likely to load in vector features in a different way</div-->
-		<div id="sqlQuery"></div>
+		<script src="./lib/proj4.js"></script>
+		
+		<!--
+		<script src="./lib/leaflet-src.js"></script>
+		<script src="./lib/leaflet.sld.js"></script>
+		<script src="./lib/proj4leaflet.js"></script>
+		<script src="./lib/leaflet.zoomdisplay-src.js"></script>
+		<script src="./lib/map_show_leaflet.js"></script>
+		-->
+		<!--script src="./lib/leaflet.textpath.js"></script-->
+		
+		<script src="https://cdn.jsdelivr.net/npm/ol@v8.2.0/dist/ol.js"></script>
+		<script src="https://unpkg.com/ol-layerswitcher@4.1.1/dist/ol-layerswitcher.js"></script>
+		<script src="./sld/sldreader.js"></script>
+		<script src="./lib/map_show_ol.js"></script>
+		<!--
+		-->
+		
 		
 		<script src="./lib/sqlquery.js"></script>
-		<script src="./lib/map_show3.js"></script>
 
-<!--
 <script src="./stlouis.js"></script>
--->
+<!--
 <script src="./london_boroughs.js"></script>
+-->
 
 		<script>
 
@@ -97,17 +87,32 @@ const userData = [
 */
 
 function onMounted(db, fetched, {baseLayers, overLayers}) {
-	
-	let map = build_map('map');
-	/**/
-	if (!baseLayers.length) {
-		let osm = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-			maxZoom: 19,
-			attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-		});
-	map.addLayer(osm);
+//console.log(db, fetched, {baseLayers, overLayers});
+	let map, xplorer;
+	let body = document.querySelector('body');
+	if (1) {
+		let html = `<div id="sqlQuery"></div>`;
+		body.insertAdjacentHTML('beforeend', html);
+		let div = document.querySelector('div#sqlQuery');
+		xplorer = new SQLQuery(div, db);
+		map = xplorer.getMap();
 	}
 	else {
+		let html = `
+		<div id="map"></div>
+		<!--div id="explanation">OpenLayers displaying a .osm file directly. This <a href="display-osm.osm">display-osm.osm</a> is a very small example. Most .osm files would be too large to do this, and in general you're more likely to load in vector features in a different way</div-->
+		`;
+		body.insertAdjacentHTML('beforeend', html);
+		let div = document.querySelector('div#map');
+		map = build_map(div);
+	}
+	/**/
+	if (!baseLayers.length) {
+		map.addLayer(osm_layer());
+	}
+	else {
+		map.addLayer(bw_layer());
+		/*
 		let bwStamen = L.tileLayer('https://tiles.stadiamaps.com/tiles/stamen_toner/{z}/{x}/{y}.png', {
 			maxZoom: 16,
 			attribution: `
@@ -117,15 +122,14 @@ function onMounted(db, fetched, {baseLayers, overLayers}) {
 			`
 		});
 		map.addLayer(bwStamen);
+		*/
 	}
 	/**/
 	let maxBounds;
-	let tileLayer;
 	for (let layer of baseLayers) {
 	//console.log(layer);
-		tileLayer = layer;
 		map.addLayer(layer);
-		layer.bringToFront();
+		//layer.bringToFront();
 		//maxBounds = layer.options.bounds;
 	}
 	for (let layer of overLayers) {
@@ -144,9 +148,12 @@ function onMounted(db, fetched, {baseLayers, overLayers}) {
 	if (typeof 'viewOptions' === 'undefined') {
 		var viewOptions = null;
 	}
-	show_map(map, viewOptions);
-	
-	new SQLQuery('div#sqlQuery', db, map);
+	if (xplorer) {
+		xplorer.showMap();
+	}
+	else {
+		show_map(map, viewOptions);
+	}
 }
 
 		</script>
@@ -157,8 +164,9 @@ function onMounted(db, fetched, {baseLayers, overLayers}) {
 		function saveJSON(fileName, data) {
 				let zip = new JSZip();
 				zip.file(
-					`${fileName}.geojson`,
-					JSON.stringify(data, null, '\t'));
+					fileName,
+					data
+					);
 				zip.generateAsync({
 					type: "blob",
 					compression: "DEFLATE"
