--- a/files/spl/spl-view3.html
+++ b/files/spl/spl-view3.html
@@ -2,10 +2,33 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
+		<script>
+			function cssLoad(src) {
+				return new Promise((resolve, reject) => {
+					let s = document.createElement('link');
+					s.rel = 'stylesheet';
+					s.href = src;
+					s.onload = resolve;
+					s.onerror = reject;
+					document.head.append(s);
+				});
+			}
+		</script>
+		<script>
+			function jsLoad(src) {
+				return new Promise((resolve, reject) => {
+					let s = document.createElement('script');
+					s.src = src;
+					s.onload = resolve;
+					s.onerror = reject;
+					document.head.append(s);
+				});
+			}
+		</script>
 		<!--
-		-->
 		<link href="./lib/leaflet.css" rel="stylesheet" />
 		<link href="./lib/leaflet.zoomdisplay.css" rel="stylesheet" />
+		-->
 		
 		<!--
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@v8.2.0/ol.css" />
@@ -45,12 +68,12 @@
 		<script src="./lib/proj4.js"></script>
 		
 		<!--
-		-->
 		<script src="./lib/leaflet-src.js"></script>
 		<script src="./lib/leaflet.sld.js"></script>
 		<script src="./lib/proj4leaflet.js"></script>
 		<script src="./lib/leaflet.zoomdisplay-src.js"></script>
 		<script src="./lib/map_show_leaflet.js"></script>
+		-->
 		<!--script src="./lib/leaflet.textpath.js"></script-->
 		
 		<!--
@@ -63,10 +86,10 @@
 		
 		<script src="./lib/sqlquery.js"></script>
 
-<!--
 <script src="./stlouis.js"></script>
--->
+<!--
 <script src="./london_boroughs.js"></script>
+-->
 
 		<script>
 
@@ -94,6 +117,51 @@ const userData = [
 	{mountpoint: dbMount, filename: 'StLouis.gpkg', url, method: 'arrayBuffer'},
 ];
 */
+
+let Leaflet = {
+	name: 'Leaflet',
+	css: [
+		"./lib/leaflet.css",
+		"./lib/leaflet.zoomdisplay.css",
+	],
+	js: [
+		"./lib/leaflet-src.js",
+		"./lib/leaflet.sld.js",
+		"./lib/proj4leaflet.js",
+		"./lib/leaflet.zoomdisplay-src.js",
+		"./lib/map_show_leaflet.js",
+		//"./lib/leaflet.textpath.js",
+	],
+};
+
+const OpenLayers = {
+	name: 'OpenLayers',
+	css: [
+		"https://cdn.jsdelivr.net/npm/ol@v8.2.0/ol.css",
+		"https://unpkg.com/ol-layerswitcher@4.1.1/dist/ol-layerswitcher.css",
+	],
+	js: [
+		"https://cdn.jsdelivr.net/npm/ol@v8.2.0/dist/ol.js",
+		"https://unpkg.com/ol-layerswitcher@4.1.1/dist/ol-layerswitcher.js",
+		"./lib/sldreader.js",
+		"./lib/map_show_ol.js",
+	],
+};
+
+let driver = Leaflet;
+
+let jsAll = Promise.resolve();
+for (let js of driver.js) {
+	jsAll = jsAll.then(() => jsLoad(js));
+}
+let cssAll = Promise.resolve();
+for (let css of driver.css) {
+	cssAll = cssAll.then(() => cssLoad(css));
+}
+Promise.all([jsAll, cssAll])
+.then(() => {
+	console.log(`${driver.name} resources loaded`);
+});
 
 function onMounted(db, fetched, {baseLayers, overLayers}) {
 //console.log(db, fetched, {baseLayers, overLayers});
@@ -143,34 +211,22 @@ function onMounted(db, fetched, {baseLayers, overLayers}) {
 		}
 	}
 	
-	if (typeof 'viewOptions' === 'undefined') {
-		var viewOptions = null;
-	}
 	if (xplorer) {
 		xplorer.showMap();
 	}
 	else {
+		if (typeof 'viewOptions' === 'undefined') {
+			var viewOptions = null;
+		}
 		show_map(map, viewOptions);
 	}
 }
 
 		</script>
-		<script>
-			function cssLoad(src) {
-				return new Promise((resolve, reject) => {
-					let s = document.createElement('link');
-					s.rel = 'stylesheet';
-					s.href = src;
-					s.onload = resolve;
-					s.onerror = reject;
-					document.head.append(s);
-				});
-			}
-		</script>
 		<script src="./lib/jszip.min.js" type="text/javascript"></script>
 		<script src="./lib/filesaver.js" type="text/javascript"></script>
 		<script>
-		function saveJSON(fileName, data) {
+		function saveFile(fileName, data) {
 				let zip = new JSZip();
 				zip.file(
 					fileName,
